2011-06-08  Nico Weber  <thakis@chromium.org>

Reviewed by Darin Adler.

        Fix a ?: precedence error in ScrollbarThemeMac and ScrollbarThemeChromium
        https://bugs.webkit.org/show_bug.cgi?id=62295

        This was found by a new warning recently added to clang's -Wparentheses

        * platform/chromium/ScrollbarThemeChromiumMac.mm:
        (WebCore::ScrollbarThemeChromiumMac::backButtonRect):
        * platform/mac/ScrollbarThemeMac.mm:
        (WebCore::ScrollbarThemeMac::backButtonRect):

Canonical link: https://commits.webkit.org/77786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88364 268f45cc-cd09-0410-ab3c-d52691b4dbfc